# stm32-cmake-libopencm3

./: .gitignore  CMakeLists.txt
cmake/: arm-none-eabi.cmake  opencm3-genlink.cmake  stm32l432kc.cmake
src/: main.c
